--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -58,7 +58,7 @@
     --color-sidebar-accent: var(--sidebar-accent);
     --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
     --color-sidebar-border: var(--sidebar-border);
-    --color-sidebar-ring: var(--sidebar-ring);
+    --color-sidebar-ring: var(--sidebar-ring); 
 }
 
 /*
@@ -75,7 +75,7 @@
     ::before,
     ::backdrop,
     ::file-selector-button {
-        border-color: var(--color-gray-200, currentColor);
+        border-color: var(--color-indigo-200, currentColor);
     }
 }
 
@@ -88,28 +88,28 @@
             'Noto Color Emoji';
     }
 }
-
+/*  hsl(0 0% 100%); */
 :root {
-    --background: hsl(0 0% 100%);
+    --background: hsl(213 44.8% 95.8%); 
     --foreground: hsl(0 0% 3.9%);
     --card: hsl(0 0% 100%);
     --card-foreground: hsl(0 0% 3.9%);
     --popover: hsl(0 0% 100%);
     --popover-foreground: hsl(0 0% 3.9%);
-    --primary: hsl(0 0% 9%);
-    --primary-foreground: hsl(0 0% 98%);
-    --secondary: hsl(0 0% 92.1%);
+    --primary: hsl(213 44.8% 52%);
+    --primary-foreground: hsl(213 44.8% 34.8%);
+    /* --secondary: hsl(0 0% 92.1%);
     --secondary-foreground: hsl(0 0% 9%);
     --muted: hsl(0 0% 96.1%);
     --muted-foreground: hsl(0 0% 45.1%);
     --accent: hsl(0 0% 96.1%);
     --accent-foreground: hsl(0 0% 9%);
     --destructive: hsl(0 84.2% 60.2%);
-    --destructive-foreground: hsl(0 0% 98%);
+    --destructive-foreground: hsl(0 0% 98%); */
     --border: hsl(0 0% 92.8%);
     --input: hsl(0 0% 89.8%);
     --ring: hsl(0 0% 3.9%);
-    --chart-1: hsl(12 76% 61%);
+    /* --chart-1: hsl(12 76% 61%);
     --chart-2: hsl(173 58% 39%);
     --chart-3: hsl(197 37% 24%);
     --chart-4: hsl(43 74% 66%);
@@ -123,10 +123,10 @@
     --sidebar-accent-foreground: hsl(0 0% 30%);
     --sidebar-border: hsl(0 0% 91%);
     --sidebar-ring: hsl(217.2 91.2% 59.8%);
-    --sidebar: hsl(0 0% 98%);
+    --sidebar: hsl(0 0% 98%); */
 }
 
-.dark {
+/* .dark {
     --background: hsl(0 0% 3.9%);
     --foreground: hsl(0 0% 98%);
     --card: hsl(0 0% 3.9%);
@@ -160,26 +160,35 @@
     --sidebar-border: hsl(0 0% 15.9%);
     --sidebar-ring: hsl(217.2 91.2% 59.8%);
     --sidebar: hsl(240 5.9% 10%);
-}
+} */
 
 @layer base {
     * {
         @apply border-border outline-ring/50;
     }
-    body {
-        @apply bg-background text-foreground;
+   
+    /* .primary {
+        @apply bg-primary text-white;
     }
 
+    .primary-light {
+        @apply bg-background;
+    }
+
+    .primary-dark {
+        @apply bg-primary-foreground text-white;
+    } */
+
     td {
-        @apply p-2 px-2 md:px-4;
+        @apply p-2 md:px-4;
     }
 
     th {
-        @apply text-left p-2 px-2 md:px-4;
+        @apply text-left p-2 md:px-4;
     }
 
     .default-text-color{
-        @apply text-gray-900
+        @apply text-primary-foreground
     }
 
     .submitBtn {
@@ -187,6 +196,6 @@
     }
 
     input, select {
-        @apply border border-1 border-indigo-300 m-4 p-1; 
+        @apply border border-1 border-indigo-300 sm:m-4 m-2 p-1; 
     }
 }
