--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -198,4 +198,8 @@
     input, select {
         @apply border border-1 border-indigo-300 sm:m-4 m-2 p-1; 
     }
+
+    .validationErr {
+        @apply text-red-500
+    }
 }
